apps/firt-app/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: internal-ca
spec:
  tls:
    - hosts:
        - whoami.svc.lan
      secretName: whoami-tls
  rules:
    - host: whoami.svc.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
